--- a/Model/Model.MapFileReader/BDMVision.Model.MapFileReader.csproj
+++ b/Model/Model.MapFileReader/BDMVision.Model.MapFileReader.csproj
@@ -86,9 +86,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MapFileDirectoryModifier.cs" />
+    <Compile Include="MapFileDirectorySelector.cs" />
     <Compile Include="MapFileReader.cs" />
     <Compile Include="MapFileReaderLibraries.cs" />
     <Compile Include="MapFileReaderHelper.cs" />
+    <Compile Include="MapFileFormatSelector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
